--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,17 @@
 server.port = 8080
 spring.application.name = demoservice
+
+# DB Properties
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+# H2 Properties
+spring.h2.console.enabled=true
+# spring.h2.console.path=/h2-console
+
+# Hibernate
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=none
